@@ -129,7 +129,7 @@ def make_auxbasis(mol, mp2fit=False):
         _basis.update(mol.basis)
         del(_basis['default'])
     else:
-        _basis = mol.basis
+        _basis = mol._basis
 
     auxbasis = {}
     for k in _basis:
