@@ -12,6 +12,8 @@ PySCF 1.4.1 (201?-?-?)
   - meta-GGA functional detection code in XC parser
   - Orbital symmetry label in mcscf initial guess projection
   - Eigenvalue ordering for Davidson eigen solver
+  - Madelung constant of non-orthogonal lattice
+  - Convergence of Madelung constant for huge number of k-points samples
 
 PySCF 1.4 (2017-10-05)
 ----------------------
